--- a/vue-project/src/assets/main.css
+++ b/vue-project/src/assets/main.css
@@ -8,6 +8,19 @@
 	font-family: 'Poppins', sans-serif;
 }
 
+::-webkit-scrollbar{
+	width: 8px;
+	padding: 4px;
+	margin: 4px;
+ }
+ ::-webkit-scrollbar-track{
+	background-color: transparent;
+ }
+ ::-webkit-scrollbar-thumb{
+	border-radius: 4px;
+	background-color: #c5c5c7;
+ }
+
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
